Closed
Bug 1505367
Opened 7 years ago
Closed 7 years ago
[Skia] Clang build fails without -msse2
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox63 | --- | unaffected |
| firefox64 | --- | unaffected |
| firefox65 | --- | fixed |
People
(Reporter: jbeich, Assigned: lsalzman)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.09 KB,
patch
|
Details | Diff | Splinter Review |
At least FreeBSD (Clang), NetBSD (GCC), OpenBSD (Clang) target x86 without SSE2 enabled by default. Only Clang build appears to be broken.
$ c++ -v
FreeBSD clang version 7.0.1 (branches/release_70 346007) (based on LLVM 7.0.1)
Target: i386-unknown-freebsd13.0
Thread model: posix
InstalledDir: /usr/bin
In file included from gfx/skia/skia/src/core/SkOpts.cpp:44:
gfx/skia/skia/src/opts/SkRasterPipeline_opts.h:684:36: error: first argument to
__builtin_convertvector must be a vector
SI F cast (U32 v) { return SK_CONVERTVECTOR((I32)v, F); }
^ ~~~~~~
gfx/skia/skia/src/opts/SkRasterPipeline_opts.h:82:37: note: expanded from macro
'SK_CONVERTVECTOR'
#define SK_CONVERTVECTOR(vec, type) __builtin_convertvector(vec, type)
^ ~~~
gfx/skia/skia/src/opts/SkRasterPipeline_opts.h:685:36: error: first argument to
__builtin_convertvector must be a vector
SI U32 trunc_(F v) { return (U32)SK_CONVERTVECTOR( v, I32); }
^ ~
gfx/skia/skia/src/opts/SkRasterPipeline_opts.h:82:37: note: expanded from macro
'SK_CONVERTVECTOR'
#define SK_CONVERTVECTOR(vec, type) __builtin_convertvector(vec, type)
^ ~~~
gfx/skia/skia/src/opts/SkRasterPipeline_opts.h:686:36: error: first argument to
__builtin_convertvector must be a vector
SI U32 expand(U16 v) { return SK_CONVERTVECTOR( v, U32); }
^ ~
gfx/skia/skia/src/opts/SkRasterPipeline_opts.h:82:37: note: expanded from macro
'SK_CONVERTVECTOR'
#define SK_CONVERTVECTOR(vec, type) __builtin_convertvector(vec, type)
^ ~~~
gfx/skia/skia/src/opts/SkRasterPipeline_opts.h:687:36: error: first argument to
__builtin_convertvector must be a vector
SI U32 expand(U8 v) { return SK_CONVERTVECTOR( v, U32); }
^ ~
gfx/skia/skia/src/opts/SkRasterPipeline_opts.h:82:37: note: expanded from macro
'SK_CONVERTVECTOR'
#define SK_CONVERTVECTOR(vec, type) __builtin_convertvector(vec, type)
^ ~~~
4 errors generated.
Comment 1•7 years ago
|
||
Right, i've seen that one on my OpenBSD/i386 buildbot, cf http://buildbot.rhaalovely.net/nine/#/builders/1/builds/282/steps/7/logs/stdio
I can't find SK_CONVERTVECTOR in chrome/m71 branch upstream.
https://treeherder.mozilla.org/#/jobs?repo=try&revision=0151ebccecf49971c3cc0daaa62e86109eb57167
Attachment #9023265 -
Flags: review?(lsalzman)
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/e06c43ca7765
fix SkRasterPipeline scalar builds. r=me
| Assignee | ||
Updated•7 years ago
|
Attachment #9023265 -
Flags: review?(lsalzman)
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Comment 4•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•7 years ago
|
status-firefox63:
--- → unaffected
status-firefox64:
--- → unaffected
status-firefox-esr60:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•