Bug 1505367 - fix SkRasterPipeline scalar builds. r=me